# todo

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  pyproject.toml  pyvenv.cfg  requirements.txt
list/: forms.py  urls.py  views.py
list/migrations/: 0002_remove_task_created_date_remove_task_due_date_and_more.py
todo/: settings.py  urls.py
todoapp/: manage.py
todoapp/general/utils/: collections.py  misc.py  settings.py
todoapp/list/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
todoapp/list/migrations/: 0001_initial.py  0003_task_is_completed.py
todoapp/list/templates/list/: create_list.html  detail_list.html
todoapp/todo/: settings.py  urls.py
todoapp/todo/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
todoapp/todo/settings/templates/: settings.dev.py
todoapp/users/: apps.py  forms.py  urls.py  views.py
todoapp/users/templates/users/: base.html  home.html  login.html  navbar.html  register.html
users/: urls.py  views.py
users/templates/users/: home.html  login.html  navbar.html
