[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Laraib Arjamand <laraibarjamand@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.4"
crispy-bootstrap5 = "^2023.10"
django-crispy-forms = "^2.1"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
